@@ -5,13 +5,45 @@
       lang="en"
       metal:use-macro="context/main_template/macros/master"
       i18n:domain="minaraad">
-
   <body>
-    <metal:block metal:fill-slot="content-core"
-                 tal:define="view nocall:context/@@attendees_view;
-                             current_path python:'/'.join(context.getPhysicalPath());
-                             agendaItems context/find_items_and_times">
-      <br />
+
+    <hidden metal:fill-slot="content-title">
+    </hidden>
+
+    <hidden metal:fill-slot="content-description">
+    </hidden>
+
+  <metal:block fill-slot="content-core"
+               tal:define="view nocall:context/@@attendees_view;
+                           current_path python:'/'.join(context.getPhysicalPath());
+                           agendaItems context/find_items_and_times;
+                           toLocalizedTime nocall:context/@@plone/toLocalizedTime;">
+  <div class="content-wrapper">
+    <main role="main" id="main-container">
+      <div class="sec-event-detail">
+        <div class="container">
+          <div class="row">
+
+            <div class=""> <!--article-event-detail-->
+              <article>
+                <metal:block use-macro="context/@@items/macros/listimageattachments"></metal:block>
+                <div class="body">
+
+                  <section class="event-detail-lead">
+                    <header>
+                      <h3>
+                        <i class="fa fa-comments"></i>
+                        <span tal:replace="python:toLocalizedTime(context.getStart_time())">2 april 2016</span>
+                      </h3>
+                      <button type="button" class="btn btn-default" onClick="location.href='#inschrijven'">Inschrijven</button>
+                    </header>
+                    <h1 tal:content="context/Title">Groenboek Beleidsplan Ruimte Vlaanderen</h1>
+                    <p class="label">Hoorzitting <span tal:content="context/getThemeTitle|nothing">Biodiversiteit</span></p>
+                    <p class="lead" tal:content="context/Description" />
+                  </section>
+
+                  <section class="event-detail">
+
       <tal:block
           define="start python:context.getStart_time()-1;
                   is_subscribed view/isRegistered;
@@ -185,6 +217,65 @@
         </fieldset>
       </tal:attendees>
 
-    </metal:block>
-  </body>
+        </section>
+        <section class="event-form" name="inschrijven" id="inschrijven">
+          <header>
+            <h3>Inschrijven</h3>
+          </header>
+          <p>Excepteur sint obcaecat cupiditat non proident culpa. Ambitioni dedisse scripsisse iudicaretur. Non equidem invideo, miror magis posuere velit aliquet.</p>
+          <form>
+            <div class="form-group">
+              <label for="firstname">Voornaam</label>
+              <input type="text" class="form-control" id="firstname" placeholder="Voornaam">
+            </div>
+            <div class="form-group">
+              <label for="lastname">Achternaam</label>
+              <input type="text" class="form-control" id="lastname" placeholder="Achternaam">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+            </div>
+            <div class="form-group">
+              <label for="functie">Functie en/of organisatie (optioneel)</label>
+              <input type="text" class="form-control" id="functie" placeholder="Functie / organisatie">
+            </div>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox"> Gegevens onthouden
+              </label>
+            </div>
+            <button type="submit" class="btn btn-default">Inschrijven</button>
+          </form>
+        </section>
+
+       </div>
+                    </article>
+
+                    <nav>
+                      <section class="prev-next">
+                        <metal:block use-macro="context/@@items/macros/nextprev" />
+                      </section>
+                      <section class="archive">
+                        <metal:block use-macro="context/@@items/macros/yeararchive" />
+
+                      </section>
+                      <section class="theme-list">
+                        <metal:block use-macro="context/@@items/macros/themelist" />
+                      </section>
+                    </nav>
+
+                  </div>
+
+                </div>
+              </div>
+            </div>
+
+           <!-- <tal:block metal:use-macro="context/@@items/macros/related_documents" />
+-->
+          </main>
+        </div>
+
+   </metal:block>
+   </body>
 </html>
