@@ -25,7 +25,6 @@
           <div class="row">
 
             <div class=""> <!--article-event-detail-->
-
               <article>
                 <metal:block use-macro="context/@@items/macros/listimageattachments"></metal:block>
                 <div class="body">
